--- a/alert-view.html
+++ b/alert-view.html
@@ -162,7 +162,7 @@
                     </div>
                     <div class="col-12">
                         <p class="d-flex"><strong class="wpx-120">ชื่อเอกสาร : </strong> Passport</p>
-                        <p class="d-flex"><strong class="wpx-120">วันที่หมดอายุ : </strong>10/12/2568</p>
+                        <p class="d-flex"><strong class="wpx-120">เดือนที่หมดอายุ : </strong>10/12/2568</p>
                         <p class="d-flex"><strong class="wpx-120">จำนวนลูกจ้าง : </strong> 5 คน</p>
                     </div>
                     <div class="w-100 card border-0 p-0"> 
@@ -179,6 +179,7 @@
                                             </th>
                                             <th class="text-center text-white">ลำดับ</th>
                                             <th class="text-start text-white">เลขบัตรประจำตัวลูกจ้าง</th>
+                                            <th class="text-start text-white">วันที่หมดอายุ</th>
                                             <th class="text-start text-white">ชื่อลูกจ้าง</th> 
                                             <th class="text-start text-white">สัญชาติ</th>  
                                             <th class="text-center text-white">ตำแหน่งงาน</th>    
@@ -195,6 +196,7 @@
                                             </td>
                                             <td class="text-center">1</td> 
                                             <td class="text-start">4685486765132</td>  
+                                            <td class="text-start">30 กันยายน 2568</td>  
                                             <td class="text-start">ดอน ไม</td> 
                                             <td class="text-start">เมียนมาร์</td>
                                             <td class="text-center">-</td> 
@@ -217,6 +219,7 @@
                                             </td>
                                             <td class="text-center">2</td> 
                                             <td class="text-start">4685486765132</td>  
+                                            <td class="text-start">22 กันยายน 2568</td>  
                                             <td class="text-start">ดอน ไม</td> 
                                             <td class="text-start">เมียนมาร์</td>
                                             <td class="text-center">-</td> 
@@ -239,6 +242,7 @@
                                             </td>
                                             <td class="text-center">3</td> 
                                             <td class="text-start">4685486765132</td>  
+                                            <td class="text-start">11 กันยายน 2568</td>  
                                             <td class="text-start">ดอน ไม</td> 
                                             <td class="text-start">เมียนมาร์</td>
                                             <td class="text-center">-</td> 
@@ -261,6 +265,7 @@
                                             </td>
                                             <td class="text-center">4</td> 
                                             <td class="text-start">4685486765132</td>  
+                                            <td class="text-start">25 กันยายน 2568</td>  
                                             <td class="text-start">ดอน ไม</td> 
                                             <td class="text-start">เมียนมาร์</td>
                                             <td class="text-center">-</td> 
@@ -283,6 +288,7 @@
                                             </td>
                                             <td class="text-center">5</td> 
                                             <td class="text-start">4685486765132</td>  
+                                            <td class="text-start">15 กันยายน 2568</td>  
                                             <td class="text-start">ดอน ไม</td> 
                                             <td class="text-start">เมียนมาร์</td>
                                             <td class="text-center">-</td> 
