--- a/alert-work.html
+++ b/alert-work.html
@@ -157,11 +157,22 @@
             </div>
             <div class="body bg-light min-vh-100">
                 <div class="p-3">
-                    <div class="d-flex mx-0 align-items-center justify-content-between test mb-3">
+                    <div class="d-flex mx-0 align-items-center test mb-3">
                         <h3 class="mb-3"><b>รายการแจ้งเตือนเอกสารหมดอายุ </b></h3>   
                         <!-- <div class="d-flex">
                             <a href="quotations-add-agent.html" class="btn btn-primary mx-1 update pt-2"><label class="icon">+</label> สร้างใบเสรอราคา</a>
                         </div> -->
+                        <div class="col-12 col-md-3 d-flex ms-5 align-items-center mb-3 position-relative">
+                            <span class="wpx-150">เลือกเดือน<span class="text-danger mx-1">*</span></span>
+                            <select class="form-control mt-1">
+                                <option value="0">เดือน</option>
+                                <option value="1">เดือน</option>
+                                <option value="2">เดือน</option>
+                                <option value="3">เดือน</option>
+                                <option value="4">เดือน</option>
+                            </select>
+                            <i class="fal fa-chevron-down iconi"></i>
+                        </div>  
                     </div>
                     <div class="w-100 card border-0 p-0"> 
                         <div class="table-responsive">
@@ -172,7 +183,7 @@
                                         <tr>
                                             <th class="text-center text-white">ลำดับ</th>
                                             <th class="text-start text-white">เอกสารที่จะหมดอายุ</th>
-                                            <th class="text-start text-white">วันที่ หมดอายุ</th>    
+                                            <th class="text-start text-white">เดือนที่ หมดอายุ</th>    
                                             <th class="text-center text-white">จำนวนลูกจ้าง</th>   
                                             <th class="text-center text-white">รายละเอียด</th> 
                                         </tr>
@@ -181,7 +192,7 @@
                                         <tr>
                                             <td class="text-center">1</td>  
                                             <td class="text-start">Passport</td>  
-                                            <td class="text-start">10/04/2568</td> 
+                                            <td class="text-start">มีนาคม</td> 
                                             <td class="text-center">5</td> 
                                             <td class="text-center update">
                                                 <div class="w-100 d-flex justify-content-center">
@@ -196,7 +207,7 @@
                                         <tr>
                                             <td class="text-center">2</td>  
                                             <td class="text-start">Visa</td>  
-                                            <td class="text-start">31/03/2568</td> 
+                                            <td class="text-start">มีนาคม</td> 
                                             <td class="text-center">13</td> 
                                             <td class="text-center update">
                                                 <div class="w-100 d-flex justify-content-center">
@@ -211,7 +222,7 @@
                                         <tr>
                                             <td class="text-center">3</td>  
                                             <td class="text-start">ต่ออายุ แจ้ง 90 วัน</td>  
-                                            <td class="text-start">31/03/2568</td> 
+                                            <td class="text-start">มีนาคม</td> 
                                             <td class="text-center">8</td> 
                                             <td class="text-center update">
                                                 <div class="w-100 d-flex justify-content-center">
