--- a/employer-profile.html
+++ b/employer-profile.html
@@ -820,18 +820,75 @@
                                         <b>เอกสารลูกจ้าง</b>
                                         <button class="btn btn-primary px-4">+ เพิ่ม</button> 
                                     </h5>
-                                    <div class="d-flex align-items-center mb-3">  
-                                        <span class="wpx-150">ใบโอนย้ายตำแหน่งงาน<span class="text-danger mx-1">*</span></span>
-                                        <div class="d-flex align-items-center wpx-150">
-                                            <a href="#">file.pdf</a>
-                                        </div> 
-                                    </div> 
-                                    <div class="d-flex align-items-center mb-3">  
-                                        <span class="wpx-150">ใบแจ้งออก<span class="text-danger mx-1">*</span></span>
-                                        <div class="d-flex align-items-center wpx-150">
-                                            <a href="#">file.pdf</a>
+                                    
+                                    <div class="row">
+                                        <div class="col-4">
+                                            <div class="d-flex align-items-center mb-3">  
+                                                <span class="wpx-200">Passport<span class="text-danger mx-1">*</span></span>
+                                                <div class="d-flex align-items-center wpx-150">
+                                                    <button class="btn btn-primary px-4">แนบรูป</button> 
+                                                </div> 
+                                            </div>  
+                                            <div class="d-flex align-items-center mb-3">  
+                                                <span class="wpx-200">หน้า VISA<span class="text-danger mx-1">*</span></span>
+                                                <div class="d-flex align-items-center wpx-150">
+                                                    <button class="btn btn-primary px-4">แนบรูป</button> 
+                                                </div> 
+                                            </div> 
+                                            <div class="d-flex align-items-center mb-3">  
+                                                <span class="wpx-200">Work Permit<span class="text-danger mx-1">*</span></span>
+                                                <div class="d-flex align-items-center wpx-150">
+                                                    <button class="btn btn-primary px-4">แนบรูป</button> 
+                                                </div> 
+                                            </div> 
+                                            <div class="d-flex align-items-center mb-3">  
+                                                <span class="wpx-200">บัตรชมพู<span class="text-danger mx-1">*</span></span>
+                                                <div class="d-flex align-items-center wpx-150">
+                                                    <button class="btn btn-primary px-4">แนบรูป</button> 
+                                                </div> 
+                                            </div> 
+                                            <div class="d-flex align-items-center mb-3">  
+                                                <span class="wpx-200">เอกสารการขึ้นทะเบียน บต.50<span class="text-danger mx-1">*</span></span>
+                                                <div class="d-flex align-items-center wpx-150">
+                                                    <button class="btn btn-primary px-4">แนบรูป</button> 
+                                                </div> 
+                                            </div> 
                                         </div>
-                                    </div> 
+                                        <div class="col-4">
+                                            <div class="d-flex align-items-center mb-3">  
+                                                <span class="wpx-200">Smart card (กรณี MOU)<span class="text-danger mx-1">*</span></span>
+                                                <div class="d-flex align-items-center wpx-150">
+                                                    <button class="btn btn-primary px-4">แนบรูป</button> 
+                                                </div> 
+                                            </div>  
+                                            <div class="d-flex align-items-center mb-3">  
+                                                <span class="wpx-200">ใบแจ้งที่พัก<span class="text-danger mx-1">*</span></span>
+                                                <div class="d-flex align-items-center wpx-150">
+                                                    <button class="btn btn-primary px-4">แนบรูป</button> 
+                                                </div> 
+                                            </div> 
+                                            <div class="d-flex align-items-center mb-3">  
+                                                <span class="wpx-200">ใบต่อ 90 วัน<span class="text-danger mx-1">*</span></span>
+                                                <div class="d-flex align-items-center wpx-150">
+                                                    <button class="btn btn-primary px-4">แนบรูป</button> 
+                                                </div> 
+                                            </div> 
+                                            <div class="d-flex align-items-center mb-3">  
+                                                <span class="wpx-200">ใบสมัครงาน<span class="text-danger mx-1">*</span></span>
+                                                <div class="d-flex align-items-center wpx-150">
+                                                    <button class="btn btn-primary px-4">แนบรูป</button> 
+                                                </div> 
+                                            </div> 
+                                            <div class="d-flex align-items-center mb-3">  
+                                                <span class="wpx-200">ใบตรวจสุขภาพแรกรับเข้าทำงาน<span class="text-danger mx-1">*</span></span>
+                                                <div class="d-flex align-items-center wpx-150">
+                                                    <button class="btn btn-primary px-4">แนบรูป</button> 
+                                                </div> 
+                                            </div> 
+                                        </div>
+                                    </div>
+
+                                    <hr>
  
                                     
                                 </div>
