--- a/index.html
+++ b/index.html
@@ -159,9 +159,10 @@
                 <div class="p-3">
                     <div class="d-flex mx-0 align-items-center justify-content-between test mb-3">
                         <h3 class="mb-3"><b>ทะเบียนลูกจ้าง </b></h3>   
-                        <!-- <div class="d-flex">
-                            <a href="quotations-add-agent.html" class="btn btn-primary mx-1 update pt-2"><label class="icon">+</label> สร้างใบเสรอราคา</a>
-                        </div> -->
+                        <div class="d-flex">
+                            <a href="#" class="btn btn-success mx-1 update pt-2"><i class="fal fa-file-excel"></i>  นำเข้าไฟล์ข้อมูลลูกจ้าง</a>
+                            <a href="worker-add.html" class="btn btn-primary mx-1 update pt-2"><label class="icon">+</label> เพิ่มลูกจ้าง</a>
+                        </div>
                     </div>
                     <div class="w-100 card border-0 p-0"> 
                         <div class="table-responsive">
