--- a/employer-add.html
+++ b/employer-add.html
@@ -144,7 +144,7 @@
             <div class="body bg-light min-vh-100">
                 <div class="p-3">
                     <div class="d-flex mx-0 align-items-center justify-content-between test mb-3">
-                        <h3 class="mb-3"><b>ข้อมูลลูกจ้าง </b></h3>    
+                        <h3 class="mb-3"><b>เพิ่มช้อมูลลูจ้าง </b></h3>    
                     </div>
 
                     
@@ -155,7 +155,7 @@
 
                                 <h5 class="mb-3"><b>กรอกข้อมูลลูกจ้าง</b></h5>
                                 <div class="row mt-3">
-                                    <div class="col-12 col-md-6 d-flex align-items-center mb-3"><span class="wpx-150">เลขบัตรประจำตัว<span class="text-danger mx-1">*</span></span><input class="form-control mt-1" type="text" maxlength="13" value="4685486765132"></div>
+                                    <div class="col-12 col-md-6 d-flex align-items-center mb-3"><span class="wpx-150">เลขบัตรประจำตัว<span class="text-danger mx-1">*</span></span><input class="form-control mt-1" type="text" maxlength="13"  ></div>
                                     <div class="col-12 col-md-6 d-flex align-items-center mb-3 position-relative">
                                         <span class="wpx-150">สัญชาติ<span class="text-danger mx-1">*</span></span>
                                         <select class="form-control mt-1">
@@ -179,7 +179,7 @@
                                         <i class="fal fa-chevron-down iconi"></i>
                                     </div>  
  
-                                    <div class="col-12 col-md-6 d-flex align-items-center mb-3"><span class="wpx-150">ชื่อต้น(ไทย)<span class="text-danger mx-1">*</span></span><input class="form-control mt-1" type="text" value="ดอน ไม"></div>
+                                    <div class="col-12 col-md-6 d-flex align-items-center mb-3"><span class="wpx-150">ชื่อต้น(ไทย)<span class="text-danger mx-1">*</span></span><input class="form-control mt-1" type="text"  ></div>
                                     <div class="col-12 col-md-6 d-flex align-items-center mb-3"><span class="wpx-150">ชื่อกลาง(ไทย)</span><input class="form-control mt-1" type="text" value=""></div>
                                     <div class="col-12 col-md-6 d-flex align-items-center mb-3"><span class="wpx-150">นามสกุล(ไทย)</span><input class="form-control mt-1" type="text" value=""></div> 
                                     <div class="col-12 col-md-6 d-flex align-items-center mb-3 position-relative">
@@ -194,16 +194,16 @@
                                         <i class="fal fa-chevron-down iconi"></i>
                                     </div>  
 
-                                    <div class="col-12 col-md-6 d-flex align-items-center mb-3"><span class="wpx-150">ชื่อต้น(Eng)<span class="text-danger mx-1">*</span></span><input class="form-control mt-1" type="text" value="Don Mai"></div>
+                                    <div class="col-12 col-md-6 d-flex align-items-center mb-3"><span class="wpx-150">ชื่อต้น(Eng)<span class="text-danger mx-1">*</span></span><input class="form-control mt-1" type="text"  ></div>
                                     <div class="col-12 col-md-6 d-flex align-items-center mb-3"><span class="wpx-150">ชื่อกลาง(Eng)</span><input class="form-control mt-1" type="text" value=""></div>
                                     <div class="col-12 col-md-6 d-flex align-items-center mb-3"><span class="wpx-150">นามสกุล(Eng)</span><input class="form-control mt-1" type="text" value=""></div>
                                     <div class="col-12 col-md-6 d-flex align-items-center mb-3">
                                         <span class="wpx-150">วันเกิด<span class="text-danger mx-1">*</span></span>
                                         <div style="min-height: 44px; position: relative; width: 100%; font-size: 0.8rem;">
-                                            <div style="width: 100%;"><input class="form-control mt-1" type="text" placeholder="dd/mm/yyyy" value="13/11/2534" style="cursor: pointer;"></div>
+                                            <div style="width: 100%;"><input class="form-control mt-1" type="text" placeholder="dd/mm/yyyy"   style="cursor: pointer;"></div>
                                         </div>
                                     </div>
-                                    <div class="col-12 col-md-6 d-flex align-items-center mb-3"><span class="wpx-150">อายุ</span><input class="form-control mt-1" type="text" value="32"></div>
+                                    <div class="col-12 col-md-6 d-flex align-items-center mb-3"><span class="wpx-150">อายุ</span><input class="form-control mt-1" type="text"></div>
 
                                     <div class="col-12 col-md-6 d-flex align-items-center mb-3 position-relative">
                                         <span class="wpx-150">เพศ<span class="text-danger mx-1">*</span></span>
@@ -481,7 +481,7 @@
                                                                     <div class="col-12 col-md-6 d-flex align-items-center mb-3">
                                                                         <span class="wpx-150">วันเกิด<span class="text-danger mx-1">*</span></span>
                                                                         <div style="min-height: 44px; position: relative; width: 100%; font-size: 0.8rem;">
-                                                                            <div style="width: 100%;"><input class="form-control mt-1" type="text" placeholder="dd/mm/yyyy" value="13/11/2534" style="cursor: pointer;"></div>
+                                                                            <div style="width: 100%;"><input class="form-control mt-1" type="text" placeholder="dd/mm/yyyy"  style="cursor: pointer;"></div>
                                                                         </div>
                                                                     </div> 
                                                                     <div class="col-12 col-md-6 d-flex align-items-center mb-3 position-relative">
