--- a/employer-add.html
+++ b/employer-add.html
@@ -152,6 +152,16 @@
                         <div class="p-3">
                             <div class="w-100">
                                  
+                                <h5 class="mb-3"><b>การรับแรงงานต่างด้าวเข้าทำงาน</b></h5>
+ 
+                                <div class="d-flex align-items-center mb-3"> 
+                                    <div class="d-flex align-items-center wpx-150"><input type="radio" name="pass_type" id="pass_type1">
+                                        <span class="ms-2">MOU</span>
+                                    </div>
+                                    <div class="d-flex align-items-center wpx-350"><input type="radio" name="pass_type" id="pass_type2">
+                                        <span class="ms-2">มีนายน้า/มาสมัครด้วยตัวเอง</span>
+                                    </div> 
+                                </div>
 
                                 <h5 class="mb-3"><b>กรอกข้อมูลลูกจ้าง</b></h5>
                                 <div class="row mt-3">
