--- a/employer-profile.html
+++ b/employer-profile.html
@@ -153,6 +153,18 @@
                             <div class="w-100">
                                  
 
+                                <h5 class="mb-3"><b>การรับแรงงานต่างด้าวเข้าทำงาน</b></h5>
+ 
+                                <div class="d-flex align-items-center mb-3"> 
+                                    <div class="d-flex align-items-center wpx-150">
+                                        <input type="radio" name="pass_type" id="pass_type1" checked>
+                                        <span class="ms-2">MOU</span>
+                                    </div>
+                                    <div class="d-flex align-items-center wpx-350">
+                                        <input type="radio" name="pass_type" id="pass_type2">
+                                        <span class="ms-2">มีนายน้า/มาสมัครด้วยตัวเอง</span>
+                                    </div> 
+                                </div>
                                 <h5 class="mb-3"><b>กรอกข้อมูลลูกจ้าง</b></h5>
                                 <div class="row mt-3">
                                     <div class="col-12 col-md-6 d-flex align-items-center mb-3"><span class="wpx-150">เลขบัตรประจำตัว<span class="text-danger mx-1">*</span></span><input class="form-control mt-1" type="text" maxlength="13" value="4685486765132"></div>
