--- a/employer-add.html
+++ b/employer-add.html
@@ -489,7 +489,7 @@
                                                                         <i class="fal fa-chevron-down iconi"></i>
                                                                     </div>  
                                  
-                                                                    <div class="col-12 col-md-6 d-flex align-items-center mb-3"><span class="wpx-150">ชื่อต้น(ไทย)<span class="text-danger mx-1">*</span></span><input class="form-control mt-1" type="text" value="ดอน ไม"></div>
+                                                                    <div class="col-12 col-md-6 d-flex align-items-center mb-3"><span class="wpx-150">ชื่อต้น(ไทย)<span class="text-danger mx-1">*</span></span><input class="form-control mt-1" type="text" value="Dan Mai"></div>
                                                                     <div class="col-12 col-md-6 d-flex align-items-center mb-3"><span class="wpx-150">ชื่อกลาง(ไทย)</span><input class="form-control mt-1" type="text" value=""></div>
                                                                     <div class="col-12 col-md-6 d-flex align-items-center mb-3"><span class="wpx-150">นามสกุล(ไทย)</span><input class="form-control mt-1" type="text" value=""></div> 
                                                                     <div class="col-12 col-md-6 d-flex align-items-center mb-3 position-relative">
