--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                                         <tr>
                                             <td class="text-center">1</td> 
                                             <td class="text-start">4685486765132</td>  
-                                            <td class="text-start">ดอน ไม</td> 
+                                            <td class="text-start">Dan Mai</td> 
                                             <td class="text-start">เมียนมาร์</td>
                                             <td class="text-start">10/12/2568</td>
                                             <td class="text-start">10/12/2568</td>
@@ -203,7 +203,7 @@
                                         <tr>
                                             <td class="text-center">2</td> 
                                             <td class="text-start">4685486765132</td>  
-                                            <td class="text-start">ดอน ไม</td> 
+                                            <td class="text-start">Dan Mai</td> 
                                             <td class="text-start">เมียนมาร์</td>
                                             <td class="text-start">10/12/2568</td>
                                             <td class="text-start">10/12/2568</td>
@@ -221,7 +221,7 @@
                                         <tr>
                                             <td class="text-center">3</td> 
                                             <td class="text-start">4685486765132</td>  
-                                            <td class="text-start">ดอน ไม</td> 
+                                            <td class="text-start">Dan Mai</td> 
                                             <td class="text-start">เมียนมาร์</td>
                                             <td class="text-start">10/12/2568</td>
                                             <td class="text-start">10/12/2568</td>
@@ -239,7 +239,7 @@
                                         <tr>
                                             <td class="text-center">4</td> 
                                             <td class="text-start">4685486765132</td>  
-                                            <td class="text-start">ดอน ไม</td> 
+                                            <td class="text-start">Dan Mai</td> 
                                             <td class="text-start">เมียนมาร์</td>
                                             <td class="text-start">10/12/2568</td>
                                             <td class="text-start">10/12/2568</td>
@@ -257,7 +257,7 @@
                                         <tr>
                                             <td class="text-center">5</td> 
                                             <td class="text-start">4685486765132</td>  
-                                            <td class="text-start">ดอน ไม</td> 
+                                            <td class="text-start">Dan Mai</td> 
                                             <td class="text-start">เมียนมาร์</td>
                                             <td class="text-start">10/12/2568</td>
                                             <td class="text-start">10/12/2568</td>
