--- a/job3.html
+++ b/job3.html
@@ -170,8 +170,8 @@
                                     <option value="job12.html">แจ้งคนต่างด้าวออกจากงาน บต.53</option> 
                                     <option value="job13.html">แจ้งเข้าทำงานเปลี่ยนนายจ้าง</option> 
                                     <option value="job14.html">แก้ไขเปลี่ยนแปลงใบอนุญาตทำงาน บต.44,บต.46 (นายจ้างเดิมลูกจ้างเดิมยืนแก้ไขเพิ่มเติม)</option> 
-                                    <option value="job15.html">เปลี่ยน/เพิ่ม ประเภทงาน เปลี่ยนจากงานอื่นมาเป็น กรรมกร กับ ขายของหน้าร้าน บต.22</option> 
-                                    <option value="job16.html">เปลี่ยน/เพิ่ม ประเภทงาน เปลี่ยนหรือเพิ่มประเภทงานตามบัญชี 2,3 บต.45</option> 
+                                    <!-- <option value="job15.html">เปลี่ยน/เพิ่ม ประเภทงาน เปลี่ยนจากงานอื่นมาเป็น กรรมกร กับ ขายของหน้าร้าน บต.22</option>   -->
+                                    <!-- <option value="job16.html">เปลี่ยน/เพิ่ม ประเภทงาน เปลี่ยนหรือเพิ่มประเภทงานตามบัญชี 2,3 บต.45</option>  -->
                                     <option value="job17.html">ต่อ VISA 1 ปี/2 ปี (นำเข้า MOU และตามมติ ครม. ในประเทศ)</option> 
                                     <option value="job18.html">ตี VISA หน้าด่าน</option> 
                                     <!-- <option value="job19.html">ขึ้นทะเบียนแรงงานต่างต้าว มติ 5 ก.ค. 66 (คนเถื่อน)</option>  -->
