--- a/_government.html
+++ b/_government.html
@@ -169,8 +169,8 @@
                                     <option value="12">แจ้งคนต่างด้าวออกจากงาน บต.53</option> 
                                     <option value="13">แจ้งเข้าทำงานเปลี่ยนนายจ้าง</option> 
                                     <option value="14">แก้ไขเปลี่ยนแปลงใบอนุญาตทำงาน บต.44,บต.46 (นายจ้างเดิมลูกจ้างเดิมยืนแก้ไขเพิ่มเติม)</option> 
-                                    <option value="15">เปลี่ยน/เพิ่ม ประเภทงาน เปลี่ยนจากงานอื่นมาเป็น กรรมกร กับ ขายของหน้าร้าน บต.22</option> 
-                                    <option value="16">เปลี่ยน/เพิ่ม ประเภทงาน เปลี่ยนหรือเพิ่มประเภทงานตามบัญชี 2,3 บต.45</option> 
+                                    <!-- <option value="15">เปลี่ยน/เพิ่ม ประเภทงาน เปลี่ยนจากงานอื่นมาเป็น กรรมกร กับ ขายของหน้าร้าน บต.22</option> 
+                                    <option value="16">เปลี่ยน/เพิ่ม ประเภทงาน เปลี่ยนหรือเพิ่มประเภทงานตามบัญชี 2,3 บต.45</option>  -->
                                     <option value="17">ต่อ VISA 1 ปี/2 ปี (นำเข้า MOU และตามมติ ครม. ในประเทศ)</option> 
                                     <option value="18">ตี VISA หน้าด่าน</option> 
                                     <!-- <option value="19">ขึ้นทะเบียนแรงงานต่างต้าว มติ 5 ก.ค. 66 (คนเถื่อน)</option>  -->
